# qt5-dtls-client

./: .gitignore  CMakeLists.txt  main.cpp  myapp.h  mydtlsclienthandler.cpp  mydtlsclienthandler.h
dtlsClientDemo/: CMakeLists.txt
dtlsClientDemo/src/: client.cpp  client.h  main.cpp
dtlsServer/: README.md
printNetworkInterfaces/: CMakeLists.txt  printNetworkInterfaces.pro  print_net_interfaces.cpp
udpClientDemo/: CMakeLists.txt  client.cpp  client.h  main.cpp  udpClientDemo.pro
